fixed overflow bg and fade in effect

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,14 @@ body {
   font-family: sans-serif;
 }
 
+#app-wrapper{
+  position: absolute;
+  overflow: hidden;
+  z-index: -3;
+  width: 100vw;
+  height: 100vh;
+}
+
 #app-container {
   background-image: url(./Assets/images/newbg.jpg);
   width: 100vw;
@@ -18,6 +26,7 @@ body {
   background-repeat: no-repeat;
   z-index: -2;
   position: absolute;
+  opacity: 0;
 }
 
 #app-filter {
@@ -25,8 +34,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: end;
-  background-color: rgba(25, 52, 53, 0.529);
-  /* background-color: rgba(0, 0, 0, 0.529); */
+  background-color: rgba(0, 0, 0, 0.608);
   width: 100vw;
   height: 100vh;
 }
@@ -35,7 +43,6 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
-  /* justify-content: center; */
 }
 
 #app-screens-content-container {
